# shared

./: .gitignore  AGENTS.md  README.ko.md  README.md  llms.txt
.agents/skill-configs/interview/: config.yaml
.agents/skill-configs/spex/: config.yaml
.claude-plugin/: marketplace.json
.claude/commands/: implement-spec.md  implement.md  write-phased.md  write-spec-phased.md  write-spec.md  write.md
.claude/skills/: interview  phaser  report-writer  rigorous-debug  run-optimize  skill-writer  spec-workflow  spex
.claude/skills/interview/: JUST_IN_CASE.template.md  SKILL.md  SYNTHESIS.template.md  config.yaml
.claude/skills/report-writer/: config.yaml
.claude/skills/rigorous-debug/: TEMPLATE-INITIALIZED.md
.claude/skills/spec-workflow/: SKILL.md  config.yaml  (+1 more)
.github/workflows/: auto-tag-plugins.yml  check-repo.yml  release-plugin.yml
docs/cross-platform/: README.md  amp.md  antigravity.md  codex-cli.md  cursor.md  gemini-cli.md
plugins/macros/: DESIGN.md  README.md
plugins/spex/: README.md
scripts/: check-repo.rb  pack-plugin.sh
tooling/skillopt/: README.ko.md  README.md  SETUP.ko.md  SETUP.md  pyproject.toml
tooling/skillopt/configs/spex_write_phased/: default.yaml
tooling/skillopt/configs/timestamp/: default.yaml
tooling/skillopt/demo/searchqa_codex/: README.ko.md  README.md  config.yaml
tooling/skillopt/demo/searchqa_codex/data/test/: items.json
tooling/skillopt/demo/searchqa_codex/data/train/: items.json
tooling/skillopt/demo/searchqa_codex/data/val/: items.json
tooling/skillopt/demo/searchqa_codex/trace/: best_skill_AFTER.md  config.resolved.json  history.json  oauth_runs.jsonl  skill_v0000_BEFORE.md  summary.json
tooling/skillopt/demo/searchqa_pi/: README.ko.md  README.md  config.yaml
tooling/skillopt/demo/searchqa_pi/trace/: best_skill_AFTER.md  config.resolved.json  history.json  routing_proof.txt  summary.json
tooling/skillopt/docs/: DESIGN.md
tooling/skillopt/examples/timestamp_optimize/: .gitignore  README.md  initial_bad.md  run.sh  show_trajectory.py
tooling/skillopt/skills/spex_write_phased/: initial.md
tooling/skillopt/skills/timestamp/: initial.md
tooling/skillopt/src/skillopt_oauth/: __init__.py  backends.py  base.py  checkpoint.py  config.py  executor.py  gate.py  loop.py  oauth_guard.py  reflect.py  registry.py  scheduler.py  train.py
tooling/skillopt/src/skillopt_oauth/envs/: __init__.py  _io.py
tooling/skillopt/src/skillopt_oauth/envs/spex_write_phased/: __init__.py  adapter.py  dataloader.py  scorer.py
tooling/skillopt/src/skillopt_oauth/envs/timestamp/: __init__.py  adapter.py  dataloader.py  scorer.py
tooling/skillopt/tasks/spex_write_phased/train/: tasks.jsonl
tooling/skillopt/tasks/spex_write_phased/val/: tasks.jsonl
tooling/skillopt/tasks/timestamp/train/: tasks.jsonl
tooling/skillopt/tasks/timestamp/val/: tasks.jsonl
tooling/skillopt/tests/: conftest.py  test_checkpoint.py  test_codex_optimizer.py  test_config.py  test_executor.py  test_gate.py  test_import.py  test_loop.py  test_oauth_guard.py  test_pi_backend.py  test_pi_config_examples.py  test_pi_oauth_guard.py  test_real_cli_compat.py  test_reflect.py  test_registry.py  test_scheduler.py  test_scorer_spex.py  test_scorer_timestamp.py
tooling/skillopt/tests/fixtures/: stub_cli.py
(+131 files in other folders)
