[project]
name = "skillopt-oauth"
version = "0.3.1"
description = "Run Microsoft SkillOpt safely on claude/codex OAuth subscription CLIs: a fail-closed OAuth preflight + env scrub guard around upstream's exec backends."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "isnbh0" }]
dependencies = [
    # Upstream Microsoft SkillOpt (https://github.com/microsoft/SkillOpt). The
    # `[claude]` extra pulls in `claude-agent-sdk`, which upstream's
    # `claude_code_exec` backend uses. This package is a thin OAuth-safety wrapper
    # over it, not a fork.
    "skillopt[claude]>=0.1.0",
]

[project.scripts]
skillopt-oauth = "skillopt_oauth.oauth_guard:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillopt_oauth"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "vendor/skillopt",
]

[tool.uv.sources]
skillopt = { workspace = true, editable = true }
