[project]
name = "skillopt-oauth"
version = "0.4.0"
description = "Guard Microsoft SkillOpt runs on local claude, codex, and pi CLIs with credential preflight, env scrubbing, and explicit backend routing."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "isnbh0" }]
dependencies = [
    # Upstream Microsoft SkillOpt (https://github.com/microsoft/SkillOpt). The
    # `[claude]` extra pulls in `claude-agent-sdk`, which the `claude_code_exec`
    # backend uses. `uv` resolves this dependency to the editable vendored fork
    # through the workspace source below.
    "skillopt[claude]>=0.1.0",
]

[project.scripts]
skillopt-oauth = "skillopt_oauth.oauth_guard:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillopt_oauth"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "vendor/skillopt",
]

[tool.uv.sources]
skillopt = { workspace = true, editable = true }
